<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="#EFEBE5"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:background="#EFEBE5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#344960" />

        <TextView
            android:id="@+id/tvCharity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charity"
            android:textColor="#344960" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#344960"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
